Update authentication flow, add documentation and SSL certificates